--- a/index.html
+++ b/index.html
@@ -1,112 +1,199 @@
 <html>
 
 <head>
-  <title>minesweeper Game</title>
-  <style>           
-    body div{
-        cursor:pointer;
-        text-align:center;
-        display:inline-block;
-        width:20px;
-        height:20px;
-        border:1px solid lightgray;
-        background-color: lightgray;
-    }
-    .bomb{
-        background-color:red;
-        color:red;
-        border-radius: 4px;
-    }
-    .close{
-        background-color: white;
-        color:white;
-        border:1px solid gray;
-        border-radius: 4px;
-    }
-    .flag{
-        background-color: green;
-        color:green;
-    }
-    #title{
-        width:100%;
-        text-align:center;
-        border:1px solid black;
-        border-radius: 4px;
-        margin: 0;
-    }
-  </style>
+    <title>minesweeper Game</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+        }
+
+        body {
+            padding: 20px;
+        }
+
+        #title {
+            text-align: center;
+            padding: 10px;
+        }
+
+        #minefield {
+            display: block;
+            border: 10px solid #555;
+            border-top: 11px solid #555;
+            border-left: 11px solid #555;
+            margin: 0px auto;
+            box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.5);
+        }
+
+        #minefield .cell {
+            float: left;
+            width: 19px;
+            height: 19px;
+            cursor: pointer;
+            background: #BBB;
+            color: #FFF;
+            line-height: 20px;
+            text-align: center;
+            font-size: 12px;
+            font-weight: bold;
+            font-family: sans-serif;
+            border-bottom: 1px solid #555;
+            border-right: 1px solid #555;
+        }
+
+        #minefield .cell:hover {
+            background: #CCC;
+        }
+
+        #minefield .clicked {
+            background: #FFF;
+            color: #070;
+        }
+
+        #minefield .clicked:hover {
+            background: #FFF;
+        }
+
+        #minefield .flag:after {
+            content: '!';
+        }
+
+        #minefield .flag {
+            background: #C70;
+        }
+
+        #minefield .flag:hover {
+
+        }
+
+        #minefield .dead {
+            background: #E00;
+        }
+
+        #minefield .dead:hover {
+            background: #F00;
+        }
+
+        #minefield .bomb:after {
+            content: '*';
+            color: #700;
+        }
+    </style>
 </head>
 <body>
 <p id="title"></p>
+<div id="minefield"></div>
 <script>
-  var minesweeper = (function(count, fileds) { // count - максимальное количество мин, fileds - количество ячеек поля
-    // устанавливаем ширину поля:
-    var body = document.getElementsByTagName('body');
-    body[0].style.width = parseInt(Math.sqrt(fileds))*22;
-    // фунция проверки на утановленную мину:
-    function hasBomb(id) {
-        x = document.getElementById(id);
-        return x ? (x.className.indexOf('bomb') != -1 ? 1 : 0) : 0;
-    }
-    // заполнение поля минами и закрытыми участками:
-    var bombs = 0;
-    for (i = 0; i < fileds; i++) {
-        r = document.createElement('div');
-        if (Math.random() * fileds < count && bombs < count) {
-            r.className = 'bomb close', document.getElementById('title').innerHTML = 'Be carefull, field has ' + (++bombs) + ' bomb\'s'; // установка и подсчет мины
-        } else r.className = 'close';
-        // добавляем ячейку c id:
-        r.id = Math.floor(i / 10) + '_' + i % 10;
-        document.body.appendChild(r);
-    }
-    // перебираем все ячейки, проставляем вероятность мины, вешаем обработчики на левый и правый клики мыши: 
-    for (o = 0; o < fileds; o++) {
-        i = Math.floor(o / 10), // строка
-        j = o % 10, // колонка
-        num = 0, // вероятность
-        obj = document.getElementById(i + '_' + j); // текущая ячека
-        // просмативаем соседей каждой ячейки: 
-        for (k = 0; k < parseInt(Math.sqrt(fileds)); k++) 
-        num += hasBomb((i - (Math.floor(k / 3) - 1)) + '_' + (j - (k % 3 - 1))); // подсчет верятности мины по соседсту
-        // установка вероятности:
-        obj.innerHTML = num == 0 ? '&nbsp;' : num;
-        // вешаем обработчик на левый клик по ячейке:
-        obj.onclick = function() {
-            mix = this.id.split('_'), open(mix[0], mix[1]); // в параметры по клику передаем строку и колонку ячейки для дальнейшей обработки
+    var mineSweeper = (function (width, height, bombsTotal) {
+        var alive = true,
+            hasBomb = 0,
+            bombsCounter = 0;
+
+        function setElement(name, args, events) {
+            var el = document.createElement(name);
+            setElementAttrs(el, args);
+            el.onclick = function () {
+                alive && events.left && (el.getAttribute('clickable') == 1) && events.left(el);
+            };
+            el.oncontextmenu = function () {
+                alive && events.right && (el.getAttribute('clickable') == 1) && events.right(el);
+                return false;
+            };
+            return el;
         }
-        // вешаем обработчик на правый клик по ячейке:
-        obj.oncontextmenu = function() {
-            this.className = this.className.indexOf('flag') != -1 ? this.className.replace(/ flag/, '') : this.className + ' flag'; // помечаем/снимаем пометку с ячейки(класс flag), для обозначения предполагаемой мины
-            return false; // для отмены отображения контекстного меню
+
+        function setElementAttrs(el, args) {
+            for (var key in args) {
+                if (args.hasOwnProperty(key)) {
+                    el.setAttribute(key, args[key]);
+                }
+            }
+            return el;
         }
-    }
-    // функция вскрытия закрытой(класс close) ячейки:
-    function open(i, j) {
-        // получаем текущий элемент по его айди i-строка, j-колонка:
-        dom = document.getElementById(i + '_' + j);
-        // если нет такого элемента или он не с пометкой закрыт(close), то останавливаем выполнение:
-        if (!dom || dom.className.indexOf('close') == -1) return;
-        if (dom.className.indexOf('bomb') != -1) { // если мы кликнули по ячейке с миной
-            // игра окончена,вскрываем все остальные ячейки:
-            divs = document.getElementsByTagName('div');
-            for (i = 0; i < divs.length; i++) divs[i].className = divs[i].className.indexOf('bomb') != -1 ? 'bomb' : '';
-            // Выводим Вы проиграли:
-            alert('You lose!');
-        } else { // если ячейка не с миной
-            dom.className = ''; // открываем ее
-            // проходим по всем ячейкам и подсчитываем количество не открытых ячеек(класс close):
-            var elems = document.getElementsByTagName('div'),
-                len = 0;
-            for (ki in elems)
-                if (elems[ki].className && elems[ki].className.indexOf('close') != -1) len++;
-            // если количество оставшихся не открытых ячеек меньше или равно количеству мин, выводим Вы выграли:
-            if (len/2 <= bombs) alert('You win!');
+
+        function getRandomInt(min, max) {
+            return Math.floor(Math.random() * (max - min + 1)) + min;
         }
-        if (dom.innerHTML == '&nbsp;') // если клик по пустой ячейке
-            for (var ks = 0; ks < parseInt(Math.sqrt(fileds)); ks++) open(i - ((Math.floor(ks / 3) - 1)), j - (((ks % 3) - 1))); // делаем перебор соседних ячеек и отрываем их, пока не встретим ячейку с вероятностью
-    }
-  });
-  minesweeper(10, 100); // запуск игры с 10-ю минами и 100 ячейками;
+
+        var mineField = document.getElementById('minefield');
+        var recursivelySearchLevel = 0;
+        var unpressedCells = width * height;
+
+        mineField.style.width = (width * 20) + 'px';
+        mineField.style.height = (height * 20) + 'px';
+
+        for (var i = 0; i < width * height; i++) {
+            mineField.appendChild(setElement('div', {num: i, clickable: 1, class: 'cell', bomb: hasBomb}, {
+                left: function (el) {
+                    if (el.getAttribute('bomb') == 1) {
+                        if (recursivelySearchLevel) {
+                            return false;
+                        }
+                        alive = false;
+                        for (i = 0; i < width * height; i++) {
+                            if (mineField.children[i].getAttribute('bomb') == 1) {
+                                mineField.children[i].setAttribute('class', 'cell bomb');
+                            }
+                        }
+                        el.setAttribute('class', el.getAttribute('class').replace(/flag/, '') + ' dead');
+                        alert('BOOM!');
+                        return false;
+                    }
+
+                    var index = parseInt(el.getAttribute('num'));
+                    var neighbours = [
+                        index - 1,
+                        index + 1,
+                        index - width - 1,
+                        index - width,
+                        index - width + 1,
+                        index + width - 1,
+                        index + width,
+                        index + width + 1
+                    ];
+                    var count = 0;
+                    for (i in neighbours) {
+                        if(el.parentNode.children[neighbours[i]]) {
+                            count += parseInt(el.parentNode.children[neighbours[i]].getAttribute('bomb'));
+                        }
+                    }
+                    setElementAttrs(el, {'class': 'cell clicked', 'clickable': 0}).innerHTML = count;
+
+                    if (!count) {  // expand recursively
+                        el.innerHTML = '';
+                        recursivelySearchLevel++;
+                        for (i in neighbours) {
+                            el.parentNode.children[neighbours[i]]
+                            && el.parentNode.children[neighbours[i]].onclick(1);
+                        }
+                        recursivelySearchLevel--;
+                    }
+                    else {
+                        el.setAttribute('class', el.getAttribute('class').replace(/flag/, ''));
+                    }
+
+                    if (--unpressedCells == bombsCounter) {
+                        alive = false;
+                        alert('YOU ARE WINNER!');
+                    }
+                },
+                right: function (el) {
+                    el.getAttribute('class').indexOf('flag') != -1 ?
+                            el.setAttribute('class', el.getAttribute('class').replace(/flag/, '')) :
+                            setElementAttrs(el, {'class': el.getAttribute('class') + ' flag'});
+                }
+            }));
+        }
+        for (i = 0; bombsCounter < bombsTotal; i++) {
+            var random = getRandomInt(0, width * height);
+            if(mineField.children[random] && mineField.children[random].getAttribute('bomb') != 1 && bombsCounter < bombsTotal) {
+                mineField.children[random].setAttribute('bomb', 1);
+                bombsCounter++;
+            }
+        }
+        document.getElementById('title').innerHTML = 'Be carefull, field has ' + bombsCounter + ' bomb\'s!';
+    })(10, 10, 10); // width, height, bombsTotal
 </script>
 </body>
 </html>
